@@ -28,7 +28,6 @@ balsa.spec
 compile
 config.guess
 config.h
-config.h.in
 config.log
 config.status
 config.sub
