@@ -613,12 +613,6 @@ fi
 AC_MSG_CHECKING([for GIT information])
 AC_MSG_RESULT($BALSA_FROM_GIT)
 
-dnl #####################################################################
-dnl 7. extra functions.
-dnl #####################################################################
-AC_CHECK_FUNCS(getaddrinfo)
-
-
 dnl ###########################################################################
 dnl Remember our prefixes
 dnl ###########################################################################
